Update Tests in package web